[package]
name = "moxie-reproduction"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1.22"
tracing-wasm = "0.1.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.69"
mox = { git = "https://github.com/anp/moxie.git", branch = "main" }
moxie = { git = "https://github.com/anp/moxie.git", branch = "main" }
moxie-dom = { git = "https://github.com/anp/moxie.git", branch = "main" }
topo = { git = "https://github.com/anp/moxie.git", branch = "main" }
illicit = { git = "https://github.com/anp/moxie.git", branch = "main" }
augdom = { git = "https://github.com/anp/moxie.git", branch = "main" }
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "HtmlTextAreaElement",
    "HtmlInputElement",
]

[patch.crates-io]
